--- a/km.css
+++ b/km.css
@@ -1,194 +1,81 @@
-
-*{
-  margin: 0;
-  padding: 0;
-  user-select: none;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-:root{
-    --yellow-color:#ffc947;
-    --black-color:#1b1b1b;
-    --white-color:#fff;
-}
-nav{
-  background:var(--black-color);
-}
-nav:after{
-  content:'';
-  clear:both;
-  display:table;
-}
-nav .logo{
-  float:left;
-  color:var(--white-color);
-  font-size: 27px;
-  font-weight: 600;
-  line-height: 70px;
-  padding-left: 60px;
-}
-nav ul{
-  float:right;
-  margin-right:40px;
-  list-style: none;
-  position:relative;
-}
-nav ul li{
-  float:left;
-  display:inline-block;
-  background:var(--black-color);
-  margin:0 5px;
-}
-nav ul li a{
-  color:var(--white-color);
-  line-height: 70px;
-  text-decoration: none;
-  font-size: 18px;
-  padding:8px 15px;
-  transition: 0.3s all ease;
-}
-nav ul li a:hover{
-  color:var(--yellow-color);
-  border-radius: 5px;
-  box-shadow: 0 0 5px var(--yellow-color), 0 0 10px var(--yellow-color);
-}
-nav ul ul li a:hover{
-  box-shadow: none;
-}
-nav ul ul{
-  position:absolute;
-  top:90px;
-  z-index: 100;
-  border-top:3px solid var(--yellow-color);
-  opacity:0;
-  visibility:hidden;
-  transition: top .3s;
-}
-nav ul ul ul{
-  border-top:none;
-}
-nav ul li:hover > ul{
-  top:70px;
-  opacity:1;
-  visibility:visible;
-}
-nav ul ul li{
-  position:relative;
-  margin:0px;
-  width:150px;
-  float:none;
-  display:list-item;
-  border-bottom:1px solid rgba(0,0,0,0.3);
-}
-nav ul ul li a{
-  line-height: 50px;
-}
-nav ul ul ul li{
-  position:relative;
-  top:-60px;
-  left:150px;
-}
-.show,.icon,input{
-  display:none;
-}
-.fa-plus{
-  font-size:15px;
-  margin-left:40px;
-}
-.content{
-  position:relative;
-}
-.content::before{
-  content:'';
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  background-image:url('images/bg.jpg');
-  background-repeat:no-repeat;
-  background-position:center;
-  background-size: cover;
-  width:100%;
-  height:calc(100vh - 70px);
-}
-.content::after{
-  content:'';
-  position:absolute;
-  top:0;
-  left:0;
-  right:0;
-  bottom:0;
-  width:100%;
-  height:calc(100vh - 70px);
-  background-color: rgba(0,0,0,.50);
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
-@media all and (max-width:968px){
-  nav ul{
-    margin-right:0px;
-    float:left;
-  }
-  nav .logo{
-    padding-left:30px;
-    width:100%;
-  }
-  .show + a, ul{
-    display:none;
-  }
-  nav ul li, nav ul ul li{
-    display:block;
-    width:100%;
-  }
-  nav ul li a:hover{
-    box-shadow: none;
-  }
-  .show{
-    display:block;
-    color:var(--white-color);
-    font-size: 18px;
-    padding:0 12px;
-    line-height: 70px;
-    cursor:pointer;
-  }
-  .show:hover{
-    color:var(--yellow-color);
-  }
-  .icon{
-    display:block;
-    color:var(--white-color);
-    position:absolute;
-    top:0;
-    right:40px;
-    line-height: 70px;
-    cursor:pointer;
-    font-size: 25px;
-  }
-  nav ul ul{
-    top:70px;
-    border-top:0px;
-    float:none;
-    position:static;
-    display:none;
-    opacity:1;
-    visibility:visible;
-  }
-  nav ul ul a{
-    padding-left: 40px;
-  }
-  nav ul ul ul a{
-    padding-left: 80px;
-  }
-  nav ul ul ul li{
-    position:static;
-  }
-  [id^=btn]:checked + ul{
-    display:block;
-  }
-  nav ul ul li{
-    border-bottom:0px;
-  }
-  span.cancel:before{
-    content:'\f00d';
-  }
+header {
+    background-color: #333;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 8px 16px;
+    transition: background-color 0.3s;
+}
+
+nav ul li a:hover {
+    background-color: #575757;
+}
+
+section {
+    padding: 100px 50px;
+    text-align: center;
+}
+
+.heading-container {
+    opacity: 0;
+    animation: fadeIn 2s forwards;
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+    }
+}
+
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.gallery-container img {
+    margin: 10px;
+    max-width: 100%;
+    height: auto;
+}
+
+/* Responsive layout */
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
+
+    section {
+        padding: 20px;
+    }
 }
