--- a/km.css
+++ b/km.css
@@ -55,15 +55,16 @@ section {
 }
 
 .gallery-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 10px;
+    justify-items: center;
 }
 
 .gallery-container img {
-    margin: 10px;
-    max-width: 100%;
+    width: 100%;
     height: auto;
+    max-width: 300px;
 }
 
 /* Responsive layout */
